--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-global-light",
   "version": "0.0.1",
   "description": "Lightweight, Highly-Customizable global state container made with React Hook and the context system",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
