--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Lightweight, Highly-Customizable global state container made with React Hook and the context system",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch": "webpack --progress -d --config webpack.config.js --watch",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -25,11 +26,16 @@
   },
   "homepage": "https://github.com/shafferchance/GlobalLight#readme",
   "devDependencies": {
-    "@babel/core": "^7.8.0",
-    "@babel/preset-env": "^7.8.0",
-    "@babel/preset-react": "^7.8.0",
+    "@babel/core": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
+    "html-loader": "^0.5.5",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
   }
 }
