--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "react-global-light",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Lightweight, Highly-Customizable global state container made with React Hook and the context system",
   "main": "dist/react-global-light.js",
+  "files": ["dist"],
   "scripts": {
     "watch": "webpack --progress -d --config webpack.config.js --watch",
     "build": "webpack --mode production"
