--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
     "html-loader": "^0.5.5",
+    "minimist": ">=1.2.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
