--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "dist"
   ],
   "scripts": {
-    "watch": "webpack --progress -d --config webpack.config.js --watch",
-    "build_tests": "webpack --progress -d --config webpack2.config.js --watch",
-    "build": "webpack --mode production"
+    "build": "rollup -c -o dist/react-global-light.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -30,23 +29,19 @@
   },
   "homepage": "https://github.com/shafferchance/GlobalLight#readme",
   "peerDependencies": {
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.8.3",
-    "acorn": ">=6.4.1",
-    "babel-loader": "^8.0.6",
-    "css-loader": "^3.4.2",
-    "html-loader": "^0.5.5",
-    "minimist": ">=1.2.2",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "acorn": ">=6.4.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "minimist": "^1.2.5",
+    "rollup": "^2.0.6",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-uglify": "^6.0.4"
+  }
 }
