--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-global-light",
   "version": "0.3.1",
   "description": "Lightweight, Highly-Customizable global state container made with React Hook and the context system",
-  "main": "dist/index.js",
+  "main": "dist/react-global-light.js",
   "scripts": {
     "test": "cross-env CI=1 react-scripts test --env=jsdom",
     "build": "webpack --mode production",
